# rust_readsh_client

./: .env.example  Cargo.toml
src/: app_config.rs  main.rs
